2004-09-27	blytkerchan
	* parse.y [IDENT_TK]: new token
	[DOUBLE_COLON_TK]: ditto
	[PRIVATE_TK]: ditto
	[PROTECTED_TK]: ditto
	[PUBLIC_TK]: ditto
	[USE_TK]: ditto
	[EXTENDS_TK]: ditto
	(unit_declaration): use IDENT_TK in stead of ``identifier''
	(qualified_function_name): new production
	(qualified_class_name): ditto
	(variable_name): ditto
	(namespace_name): ditto
	(scope_identifier): ditto
	(inheritance_specifiers): re-format
	(class_attrs): new production
	(class_name_list): ditto
	(class_attrs_freeform): ditto
	(function_attrs_freeform): fix type-o
	(constructor_definition): ditto

2004-08-24	blytkerchan
	* parse.y [ROOT_RK]: new token
	[LEAF_TK: ditto
	[ABSTRACT_K]: ditto
	(class_definition): allow inheritance specifiers for classes and
	singletons
	(inheritance_specifiers): new token

2004-08-15	blytkerchan
	* parse.y [SINGLETON_TK]: new token
	(class_declaration): allow a class declaration with the singleton
	token
	(class_definition): follow the same definition style as functions and
	variables - i.e. don't put the scope modifier before the class or
	singleton token

	* parse.y (translation_unit): remove initialization and finilization
	sections

2004-08-13	blytkerchan
	* parse.y (translation_unit): rewrite

	* parse.y: for every token, document what it looks like (we don't have
	a lexical scanner yet)
	(constructor_definition): new production
	(destructor_definition): ditto

2004-08-12	blytkerchan
	* parse.y: make a %token definition for each missing lexical token
	(declaration): include function_declaration
	(alias_declaration): revise alias declaration grammar to be more
	coherent with function and variable declarations
	allow aliases of functions
	(variable_declaration): revise grammar according to discussions on
	jail-ust-lang
	(function_declaration): new production

2004-08-03	blytkerchan
	* parse.y: add function attribute definition as per
	http://tinyurl.com/3t3sh

2004-08-02	blytkerchan